feat(neighborhoods): coarse-grained generic moves
# Conflicts:
#	core/src/main/java/ai/timefold/solver/core/impl/heuristic/selector/list/RandomSubListSelector.java
#	core/src/test/java/ai/timefold/solver/core/impl/move/MoveDirectorTest.java
#	core/src/test/java/ai/timefold/solver/core/impl/score/director/ScoreDirectorFactoryFactoryTest.java

# Conflicts:
#	core/src/main/java/ai/timefold/solver/core/impl/move/MoveDirector.java